--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,4 @@
 {
-	"name": "nette/web-project",
-	"description": "Nette: Standard Web Project",
-	"type": "project",
-	"license": ["MIT", "BSD-3-Clause", "GPL-2.0", "GPL-3.0"],
 	"require": {
 		"php": ">= 5.3",
 		"nette/application": "^2.3.6",
@@ -19,7 +15,10 @@
 		"nette/security": "^2.3",
 		"nette/utils": "^2.3",
 		"latte/latte": "^2.3",
-		"tracy/tracy": "^2.3"
+		"tracy/tracy": "^2.3",
+		"facebook/php-sdk-v4": "^5.1",
+		"jwhennessey/phpinsight": "^2.0",
+		"nextras/dbal": "^2.0"
 	},
 	"require-dev": {
 		"nette/tester": "^1.6"
