add analysis of twitter accounts

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -8,6 +8,7 @@ services:
 	router: App\RouterFactory::createRouter
 
 	- Model\FacebookApi(%facebook.appId%, %facebook.appSecret%, %facebook.accessToken%)
+	- Model\TwitterApi(%twitter.consumerKey%, %twitter.consumerSecret%, %twitter.accessToken%, %twitter.accessTokenSecret%)
 	- Model\SentimentAnalyzer
 	- Model\PagesRepository
 	- Model\PagesManager
