--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		"tracy/tracy": "^2.3",
 		"facebook/php-sdk-v4": "^5.1",
 		"jwhennessey/phpinsight": "^2.0",
-		"nextras/dbal": "^2.0"
+		"nextras/dbal": "^2.0",
+		"j7mbo/twitter-api-php": "^1.0"
 	},
 	"require-dev": {
 		"nette/tester": "^1.6"
